# rbdl-lite

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
example/config/: dummy.urdf
model/: DynModel.cpp  DynModel.hpp  KinModel.cpp  KinModel.hpp  RobotDefinition.hpp  RobotModel.cpp  RobotModel.hpp
rbdl/: Body.h  Constraints.cc  Constraints.h  Dynamics.cc  Dynamics.h  Joint.cc  Joint.h  Kinematics.cc  Kinematics.h  Logging.cc  Logging.h  Model.cc  Model.h  Quaternion.h  SpatialAlgebraOperators.h  compileassert.h  rbdl.h  rbdl_config.h  rbdl_eigenmath.h  rbdl_math.h  rbdl_mathutils.cc  rbdl_mathutils.h  rbdl_utils.cc  rbdl_utils.h  rbdl_version.cc  urdfreader.cc  urdfreader.h
urdf/: color.h  exception.h  exportdecl.h  joint.cpp  joint.h  link.cpp  link.h  model.cpp  model.h  pose.cpp  pose.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  urdf_parser.h
utils/: common_convert_calcu.cpp  common_convert_calcu.hpp  pseudo_inverse.cpp  pseudo_inverse.hpp
